--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.15",
     "@vitejs/plugin-react": "^4.2.1",
+    "react-router-dom": "^6.22.3",
     "typescript": "4.4.4",
     "vite": "^5.0.11"
   },
