--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axiom": "^0.1.6",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
+    "express": "^4.18.3",
     "mqtt": "^5.3.6",
     "react": "^18.0.0",
     "react-chartjs-2": "^5.2.0",
