--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mqtt": "^5.3.6",
     "react": "^18.0.0",
     "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
